# MarkovLove

./: .gitignore  README.md  parser.hpp  testConvo.txt
Trunk/: CMakeLists.txt
Trunk/assets/: L1.txt
Trunk/inc/: button.hpp  girl.hpp  gui.hpp  markov_chain.hpp  parser.hpp
Trunk/src/: CMakeLists.txt  button.cpp  girl.cpp  gui.cpp  main.cpp  markov_chain.cpp  parser.cpp  parser.hpp
